--- a/job-board-example/package.json
+++ b/job-board-example/package.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
-    "@devflowinc/trieve-js-ts-client": "^0.6.2",
-    "@types/node": "^20.12.7",
+    "@types/node": "^22.0.0",
     "csv-parse": "^5.5.6"
   },
   "name": "locatel",
   "module": "upload-indeed-listings.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "dotenv": "^16.4.5"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.4"
   }
 }
