--- a/job-board-example/package.json
+++ b/job-board-example/package.json
@@ -7,8 +7,7 @@
   "module": "upload-indeed-listings.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest",
-    "dotenv": "^16.4.5"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.5.4"
